k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: poorna2601/job-app-api-gateway
        resources:
          limits:
              memory: "550Mi"
              cpu: "250m"
          requests:
            memory: "250Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 20
          timeoutSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: LoadBalancer #to expose the port externally to use as api
  #instaed of this use ingress and keep the type as ClusterIp and in Ingress.yml expose the port externally
  selector:
    app: api-gateway
  ports:
  - port: 80
    targetPort: 8080
