k8s/job-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: job-db
spec:
  selector:
    matchLabels:
      app: job-db
  serviceName: job-db
  replicas: 1
  template:
    metadata:
      labels:
        app: job-db
    spec:
      containers:
      - name: job-db
        image: postgres:16
        resources:
          limits:
              memory: "200Mi"
              cpu: "200m"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: "standard-rwo" 
      volumeMode: Filesystem

---
#headless service important
apiVersion: v1
kind: Service
metadata:
  name: job-db #this name should be same as above service name #must use this name in job service
spec:
  clusterIP: None
  selector:
    app: job-db
  ports:
  - port: 5432
    targetPort: 5432
