k8s/notifyms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifyms
spec:
  selector:
    matchLabels:
      app: notifyms
  template:
    metadata:
      labels:
        app: notifyms
    spec:
      containers:
      - name: notifyms
        image: poorna2601/job-app-notifyms
        resources:
          limits:
            memory: "400Mi"
            cpu: "200m"
          requests:
            memory: "200Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000

---
#Headless service
apiVersion: v1
kind: Service
metadata:
  name: notifyms
spec:
  selector:
    app: notifyms
  ports:
  - port: 80
    targetPort: 8000
