k8s/review-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: review-db
spec:
  selector:
    matchLabels:
      app: review-db
  serviceName: review-db
  replicas: 1
  template:
    metadata:
      labels:
        app: review-db
    spec:
      containers:
        - name: review-db
          image: postgres:16
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: "standard-rwo"
        volumeMode: Filesystem

---
#headless service important
apiVersion: v1
kind: Service
metadata:
  name: review-db #this name should be same as above service name #must use this name in review service
spec:
  clusterIP: None
  selector:
    app: review-db
  ports:
    - port: 5432
      targetPort: 5432
