k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service: 
            name: api-gateway
            port: 
              number: 80
      - path: "/kafka-ui"
        pathType: Prefix
        backend:
          service: 
            name: kafka-ui-service
            port: 
              number: 8080

#ingress is like security to expose apis exteranlly ,keep all the other services headless and type:clusterip bounded
#in ingress just expose whichevr you want but only expose api gateway like this
#additionaly if you dont wanna use ingress ,thn make api-gatway type as loadbalancer to expose the port
